Added rate limit for spend operations and tests, added Dockerfile with test executions

--- a/src/main/resources/static/api-tester.html
+++ b/src/main/resources/static/api-tester.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Virtual Card Platform API Tester (Improved)</title>
+    <title>Virtual Card Platform API Tester</title>
     <style>
         body {
             font-family: Arial, sans-serif;
